<resources>
    <string name="app_name">VSIYP</string>
    <string name="start_tv">Get started</string>
    <plurals name="error_file_tips">
        <item quantity="one" priority="translator">File error. Unable to add %1$d item.</item>
        <item quantity="zero">File error. Unable to add %1$d item</item>
        <item quantity="two">File error. Unable to add %1$d item</item>
        <item quantity="few">File error. Unable to add %1$d item</item>
        <item quantity="many">File error. Unable to add %1$d item</item>
        <item quantity="other" priority="translator">File error. Unable to add %1$d items.</item>
    </plurals>
    <string name="error_file_tips_single_video" priority="translator">Unsupported or corrupted file. Unable to edit.</string>
    <string name="setting_text" priority="LT">Settings</string>
    <string name="main_template_guide_text" priority="LT">Tutorials</string>
    <string name="home_start_clip" priority="LT">Get started</string>
    <string name="des_title_cut" priority="LT">Projects</string>
    <string name="main_update_text" priority="LT">Last edited: %s</string>
    <string name="home_tab1" priority="LT">Templates</string>
    <string name="home_select_all" priority="LT">Select all</string>
    <string name="home_select_all_deselect" priority="LT">Deselect all</string>
    <string name="home_select_delete_cancel">Cancel</string>
    <string name="home_select_delete_video" priority="LT">Delete all selected videos?</string>
    <string name="home_select_delete_title" priority="LT">Rename</string>
    <string name="home_select_delete_copy" priority="translator">Copy</string>
    <string name="home_select_delete_copy_success" priority="translator">Copied.</string>
    <string name="home_select_delete_copy_fail" priority="translator">Unable to copy.</string>
    <string name="home_select_delete_copy_name" priority="translator">"Copies"</string>
    <plurals name="home_select_num3">
        <item quantity="one" priority="LT">%d item selected</item>
        <item quantity="zero">%d item selected</item>
        <item quantity="two">%d items selected</item>
        <item quantity="few">%d items selected</item>
        <item quantity="many">%d items selected</item>
        <item quantity="other" priority="LT">%d items selected</item>
    </plurals>
    <string name="home_select_num4" priority="translator">No items selected.</string>
    <string name="home_select_num5" priority="LT">Nothing here yet</string>
    <plurals name="count_study">
        <item quantity="one" priority="translator">%d view</item>
        <item quantity="zero">%d secondary learning</item>
        <item quantity="two">%d secondary learning</item>
        <item quantity="few">%d secondary learning</item>
        <item quantity="many">%d secondary learning</item>
        <item quantity="other" priority="LT">%d views</item>
    </plurals>
    <string name="mine_trailer" priority="LT">Add outro</string>
    <string name="mine_clean" priority="LT">Clear cache</string>
    <string name="mine_about" priority="translator">About</string>
    <string name="mine_clean_done" priority="translator">Cache cleared.</string>
    <string name="mine_clean_message_box" priority="translator">Clearing the cache won\'t affect your drafts.</string>
    <string name="about_version" priority="LT">Version %s</string>
    <string name="about_license" priority="LT">Open Source Licenses</string>
    <string name="about_copyright" priority="translator">Petal Clip. All rights reserved. ©%d</string>
    <string name="about_service" priority="translator">This service will no longer be available. Disable anyway?</string>
    <string name="about_stop" priority="translator">Disable</string>
    <string name="about_text" priority="translator">About</string>
    <string name="about_and" priority="translator">and</string>
    <string name="no_network" priority="translator">No Internet connection. Check your network settings.</string>
    <string name="video_edit_service_msg" priority="translator">Edit and create your own videos.</string>
    <string name="video_edit_service_title" priority="translator">Petal Clip</string>
    <string name="video_edit_service_sub_msg" priority="translator">This service requires Internet access. By touching AGREE, you grant this permission and agree to the %1$s and %2$s.</string>
    <string name="dialog_button_agree" priority="translator">Agree</string>
    <string name="mine_update" priority="translator">Check for updates</string>
    <string name="music_style_ballads" priority="translator">Folk</string>
    <string name="music_style_modern" priority="translator">Modern</string>
    <string name="music_style_piano" priority="translator">Piano</string>
    <string name="music_style_sport" priority="translator">Tempo</string>
    <string name="music_style_afternoon" priority="translator">Relaxed</string>
    <string name="slogan_one" priority="translator">Edit like a pro</string>
    <string name="slogan_two" priority="translator">Unleash your creativity</string>
    <string name="slogan_three" priority="translator">See what you can create.</string>
    <string name="welcome_to" priority="LT">Welcome to</string>
    <string name="china_wecome_tips">Enjoy Smart Clips</string>
    <string name="welcome_to_agree" priority="LT">Agree</string>
    <string name="welcome_to_oversea_disagree" priority="translator">Disagree</string>
    <string name="welcome_to_oversea_notes" priority="translator">This service needs to connect to the Internet and access device, app, and network information, as well as other data you submit. If you are a minor, you must obtain your parent/guardian\'s consent to use this service. By touching AGREE, you indicate that you grant the above permissions and accept the terms of the %1$s and %2$s.</string>
    <string name="welcome_to_china_notes" priority="translator">This service requires access to storage and microphone permissions to obtain device, application, and network information, and to read images and audio and video information for video editing. By clicking Agree, you agree to the above content and %1$s and %2$s.</string>
    <string name="china_clip_privacy" priority="LT">Statement About Petal Clip and Privacy</string>
    <string name="china_clip_agreement" priority="LT">Petal Clip User Agreement</string>
    <string name="china_networking" priority="translator">Internet</string>
    <string name="aala_one" priority="translator">This service requires an &lt;b&gt;Internet&lt;/b&gt; connection and needs to access device, app, and network information, as well as data you actively upload.</string>
    <string name="aala_two" priority="translator">If you are a minor, you must obtain your parent/guardian\'s consent to use this service.</string>
    <string name="aala_three" priority="translator">By touching AGREE, you agree to these terms as well as the %1$s and %2$s.</string>
    <string name="aala_privacy" priority="translator">Statement About Petal Clip and Privacy</string>
    <string name="aala_user" priority="translator">Petal Clip User Agreement</string>
    <string name="europe_tips" priority="translator">The following categories of information will be collected and used to provide this service:</string>
    <string name="europe_title_one" priority="translator">· Device information</string>
    <string name="europe_title_two" priority="translator">· Network information</string>
    <string name="europe_title_three" priority="translator">· App usage information</string>
    <string name="europe_title_four" priority="translator">· Basic system information</string>
    <string name="europe_title_five" priority="translator">· Basic app information</string>
    <string name="europe_content_one" priority="translator">Such as device identifier (UUID), model, and type</string>
    <string name="europe_content_two" priority="translator">Such as requested URLs and request type</string>
    <string name="europe_content_three" priority="translator">Such as app launch time and performance data</string>
    <string name="europe_content_four" priority="translator">Such as screen resolution and language settings</string>
    <string name="europe_content_five" priority="translator">Such as app name, package name, and version number</string>
    <string name="europe_tips_two" priority="translator">The data controller is Aspiegel SE, a subsidiary of Huawei in Ireland. Your data will also be used for the purpose of service improvement.</string>
    <string name="europe_tips_three" priority="translator">For more information on how we process your data and about your rights, including the right to object, touch %s.</string>
    <string name="europe_here" priority="translator">here</string>
    <string name="europe_tips_four" priority="translator">This service requires the following permissions:</string>
    <string name="europe_next_title_one" priority="translator">· Storage</string>
    <string name="europe_next_title_two" priority="translator">· Internet</string>
    <string name="europe_next_title_three" priority="translator">· Microphone</string>
    <string name="europe_next_title_four" priority="translator">· Phone</string>
    <string name="europe_next_content_one" priority="translator">To allow us to save audio and video files</string>
    <string name="europe_next_content_two" priority="translator">To allow you to access online resources</string>
    <string name="europe_next_content_three" priority="translator">To allow you to use recordings as audio resources</string>
    <string name="europe_next_content_four" priority="translator">For us to obtain device information</string>
    <string name="europe_description" priority="translator">If you are a minor, you must obtain your parent/guardian\'s consent to use this service.</string>
    <string name="europe_privacy_related" priority="translator">By touching AGREE, you indicate that you grant the above permissions and accept the terms of the %1$s.</string>
    <string name="europe_privacy_link" priority="translator">Petal Clip User Agreement</string>
    <string name="europe_next" priority="translator">Next</string>
    <string name="overseas_about" priority="translator">Share device and app usage data</string>
    <string name="overseas_about_content" priority="translator">Your data will be used to help improve this service.</string>
    <string name="app_permission" priority="translator">Permissions required</string>
    <string name="name_can_not_be_empty" priority="translator">Name cannot be left blank.</string>
    <string name="select_media_recent_projects" priority="LT">Recent</string>
    <string name="media_video" priority="LT">All videos</string>
    <string name="media_picture" priority="LT">All images</string>
    <string name="material_library" priority="translator">Library</string>
    <string name="media_import" priority="LT">Import (%d)</string>
    <string name="media_import_new" priority="translator">Import</string>
    <string name="select_media_total_time" priority="LT">Total: %s</string>
    <string name="select_media_has_select" priority="LT">Selected: %s</string>
    <string name="media_imported" priority="translator">Imported</string>
    <string name="media_cropped" priority="translator">Cropped</string>
    <string name="press_drag_to_sort" priority="translator">Drag items to rearrange</string>
    <string name="video" priority="LT">Videos</string>
    <string name="picture" priority="LT">Images</string>
    <string name="HD_image_quality" priority="LT">HD quality</string>
    <plurals name="add_video_num">
        <item priority="LT" quantity="one">%d video</item>
        <item priority="LT" quantity="other">%d videos</item>
    </plurals>
    <string name="cut_second_menu_delete" priority="LT">Delete</string>
</resources>