<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_color_FF181818">

    <com.example.vsiyp.ui.common.view.EditorTextView
        android:id="@+id/home_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="@dimen/dp_24"

        android:gravity="start|center_vertical"
        android:maxWidth="312dp"
        android:maxLines="2"
        android:text="@string/app_name"
        android:textColor="#FFFFFFFF"
        android:textSize="@dimen/dp_30"
        app:layout_constraintBottom_toTopOf="@+id/card_upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/setting"
        android:layout_width="@dimen/dp_24"
        android:layout_height="@dimen/dp_24"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/home_setting_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/card_upload"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:layout_constraintEnd_toStartOf="@+id/card_upload_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_notice"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@drawable/start_create">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_17"
            android:layout_marginTop="@dimen/dp_47"
            android:src="@drawable/edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_6"
            android:layout_marginTop="@dimen/dp_46"
            android:gravity="center"
            android:text="@string/start_tv"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_18" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/card_upload_2"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:layout_constraintEnd_toStartOf="@+id/card_upload"
        app:layout_constraintStart_toStartOf="@+id/card_upload"
        app:layout_constraintTop_toBottomOf="@+id/card_upload"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@drawable/ic_main_bg">

        <ImageView
            android:layout_width="44dp"
            android:layout_height="47dp"
            android:layout_marginStart="@dimen/dp_17"
            android:layout_marginTop="@dimen/dp_47"
            android:src="@drawable/icon_camera" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_6"
            android:layout_marginTop="@dimen/dp_46"
            android:gravity="center"
            android:text="Camera"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_18" />
    </LinearLayout>


    <com.example.vsiyp.ui.common.view.EditorTextView
        android:id="@+id/home_draft_clip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_25"

        android:gravity="start|center_vertical"
        android:maxWidth="312dp"
        android:maxLines="2"
        android:text="@string/des_title_cut"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_upload_2"
        tools:ignore="SpUsage" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/content_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/home_select_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_draft_clip" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_select_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/home_select_delete"
            android:layout_width="@dimen/dp_80"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            android:drawablePadding="@dimen/dp_2"

            android:gravity="center"
            android:text="@string/cut_second_menu_delete"
            android:textColor="@drawable/home_clips_text_color_selector"
            android:textSize="@dimen/dp_10"
            app:drawableTopCompat="@drawable/home_clips_delete_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/home_select_all"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/home_select_all"
            android:layout_width="@dimen/dp_80"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            android:drawablePadding="@dimen/dp_2"

            android:gravity="center"
            android:text="@string/home_select_all"
            android:textColor="@drawable/home_clips_text_color_selector"
            android:textSize="@dimen/dp_10"
            app:drawableTopCompat="@drawable/home_clips_select_delete_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/home_select_delete"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/home_draft_no_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/dp_8"

        android:gravity="center"
        android:text="@string/home_select_num5"
        android:textColor="@color/translucent_white_60"
        android:textSize="@dimen/dp_14"
        android:visibility="visible"
        app:drawableTopCompat="@drawable/icon_home_empty"
        app:layout_constraintBottom_toTopOf="@+id/home_select_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_draft_clip"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>